# mandelbrot

./: CMakeLists.txt  README.md
src/: common.h  main.cpp  mandelbrot.h
